@@ -2562,6 +2562,14 @@ declare global {
          */
         status: VehicleStatus;
 
+
+        /**
+         * Current vehicle spin rotation.
+         * Values are 0-255. The game actually only considers the higher
+         * 5 bits when rendering.
+         */
+        spin: number;
+
         /**
          * The location and direction of where the car is on the track.
          */
