@@ -91,6 +91,9 @@ namespace OpenRCT2::Scripting
         std::string status_get() const;
         void status_set(const std::string& value);
 
+        uint8_t spin_get() const;
+        void spin_set(uint8_t value);
+
         std::vector<DukValue> guests_get() const;
 
         DukValue gForces_get() const;
